提交flow 统计
